# quant-research-engine

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  const.py  data_fetcher.py  doctor.py  fundamental.py  glossary.py  industry_config.py  mock_broker.py  models_fundamental.py  models_portfolio.py  models_quant.py  models_technical.py  pyproject.toml  quant_models.py  requirements-copilot.txt  requirements-sentiment.txt  requirements.txt  schema.sql  scoring_ars.py  scoring_legacy.py  scripts_experiment_regime_ab.py  scripts_measure_momentum.py  scripts_revalidate_rigor.py  scripts_test_momentum_candidate.py  sector_rotation.py  suggestions.py  track
auto_trader/: __init__.py  config.py  credentials.py  fleet.py  requirements_trader.txt  trader_main.py  utils.py
cli/: __init__.py  track.py
data_providers/: stooq_provider.py  yfinance_provider.py
deploy/: com.tj.quant-tracker.daily.plist  com.tj.quant-tracker.monthly.plist  com.tj.quant-tracker.weekly.plist
docs/: ALPACA_PAPER.md  CASE_STUDY.md  INSIGHTS_upgrades.md
examples/: Dashboard.html
logs/: .gitkeep
render/: __init__.py  build.py  glossary.py  html.py  markdown.py  notes.py  slides.py
screener/: __init__.py  config.py  requirements_screener.txt  screener_main.py  signal.py
scripts/: health_check.py
tasks/: audit_universe.py  manage_holdings.py  precompute_mc.py  refresh_health.py  refresh_prices.py  refresh_sectors.py  refresh_sentiment.py  seed_universe.py
tests/: conftest.py  test_accounting_invariants.py  test_agent_journal.py  test_clustering.py  test_company_health.py  (+21 more)
(+90 files in other folders)
